<resources>
    <string name="app_name">Quick Tap</string>
    <string name="tap">Tap!</string>
    <string name="go">Go!</string>
    <string name="end">End!</string>
    <string name="_0">0</string>
    <string name="_100">100</string>
    <string name="initial_count">100</string>
    <string name="final_count">0</string>
    <string name="click_count">0</string>
    <string name="score_board">Score Board</string>
    <string name="ranking">Ranking:</string>
    <string name="score">Score:</string>
    <string name="username">Username</string>
    <string name="reload">Reload</string>
    <string name="share">Share</string>
</resources>